src/objects/P7S1_PostalCode2State__c.object
<CustomObject>
    <description>Zuordnung von Postleitzahl-Intervallen in Deutschland zu Bundesländern und Nielsengebiet</description>
    <fields>
        <fullName>P7S1_NielsenArea__c</fullName>
        <label>Nielsengebiet</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_PostalCodeFrom__c</fullName>
        <label>Postleitzahl von</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_PostalCodeTo__c</fullName>
        <label>Postleitzahl bis</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_State__c</fullName>
        <label>Bundesland</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Postleitzahl Bundesland-Zuordnung</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Postleitzahl-Bundesland-Zuordnung</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Postleitzahl Bundesland-Zuordnungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>